# timed-backgrounds

./: .gitignore  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac  extra-backgrounds.xml  firewatch-timed.xml  island-timed.xml
backgrounds/: 24-hours-timed.xml.in  Makefile.am  extra-backgrounds.xml.in  firewatch-timed.xml  firewatch-timed.xml.in  get-times.sh  island-timed.xml  island-timed.xml.in  metropolis-timed.xml.in  mountainside-timed.xml.in  set-times.sh  timed.xml.in
src/: Makefile.am  config-ini.c  config-ini.h  location-geoclue2.c  location-geoclue2.h  location-manual.c  location-manual.h  main.c  main.h  pipeutils.c  pipeutils.h  solar.c  solar.h  systemtime.c  systemtime.h
templates/: day-night.xml.in  day-sunset-night.xml.in  sunrise-day-sunset-night-static.xml.in  sunrise-day-sunset-night.xml.in
